// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Experience should render correctly 1`] = `
<div
  className=" flex items-start"
>
  <div>
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "boxSizing": "border-box",
          "display": "inline-block",
          "height": "initial",
          "margin": 0,
          "maxWidth": "100%",
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "relative",
          "width": "initial",
        }
      }
    >
      <span
        style={
          Object {
            "background": "none",
            "border": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": "initial",
            "margin": 0,
            "maxWidth": "100%",
            "opacity": 1,
            "padding": 0,
            "width": "initial",
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDgiIGhlaWdodD0iNDgiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
          style={
            Object {
              "background": "none",
              "border": 0,
              "display": "block",
              "height": "initial",
              "margin": 0,
              "maxWidth": "100%",
              "opacity": 1,
              "padding": 0,
              "width": "initial",
            }
          }
        />
      </span>
      <img
        className="rounded"
        data-nimg="intrinsic"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": undefined,
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          className="rounded"
          data-nimg="intrinsic"
          decoding="async"
          loading="lazy"
          src="acme.jpg"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
  <div
    className="flex-1 pl-2"
  >
    <h2
      className="font-bold"
    >
      Explosive researcher
    </h2>
    <p>
      <a
        className="underline"
        href="http://acme.co"
        rel="noreferrer"
        target="_blank"
      >
        ACME Co
      </a>
       
      —
       
      4 day week
    </p>
    <p
      className="text-neutral-500 text-sm"
    >
      <time>
        Jan 2020
         → 
        Dec 2021
         
        · 2 yrs 0 mo
      </time>
    </p>
    <p
      className="text-neutral-500 text-xs"
    >
      US
    </p>
    <div
      className="mt-2 font-sans text-sm"
    >
      Design and development of Explosive Tennis Balls
      <button
        className="block mt-4 text-sm text-neutral-500"
        onClick={[Function]}
        type="button"
      >
        ...see more
      </button>
    </div>
  </div>
</div>
`;

exports[`components/Experience should render correctly with full-time and office 1`] = `
<div
  className=" flex items-start"
>
  <div>
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "boxSizing": "border-box",
          "display": "inline-block",
          "height": "initial",
          "margin": 0,
          "maxWidth": "100%",
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "relative",
          "width": "initial",
        }
      }
    >
      <span
        style={
          Object {
            "background": "none",
            "border": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": "initial",
            "margin": 0,
            "maxWidth": "100%",
            "opacity": 1,
            "padding": 0,
            "width": "initial",
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDgiIGhlaWdodD0iNDgiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
          style={
            Object {
              "background": "none",
              "border": 0,
              "display": "block",
              "height": "initial",
              "margin": 0,
              "maxWidth": "100%",
              "opacity": 1,
              "padding": 0,
              "width": "initial",
            }
          }
        />
      </span>
      <img
        className="rounded"
        data-nimg="intrinsic"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": undefined,
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          className="rounded"
          data-nimg="intrinsic"
          decoding="async"
          loading="lazy"
          src="acme.jpg"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
  <div
    className="flex-1 pl-2"
  >
    <h2
      className="font-bold"
    >
      Explosive researcher
    </h2>
    <p>
      <a
        className="underline"
        href="http://acme.co"
        rel="noreferrer"
        target="_blank"
      >
        ACME Co
      </a>
       (Explosive R&D)
       
      —
       
      Full time
    </p>
    <p
      className="text-neutral-500 text-sm"
    >
      <time>
        Jan 2020
         → 
        Dec 2021
         
        · 2 yrs 0 mo
      </time>
    </p>
    <p
      className="text-neutral-500 text-xs"
    >
      US
    </p>
    <div
      className="mt-2 font-sans text-sm"
    >
      Design and development of Explosive Tennis Balls
      <button
        className="block mt-4 text-sm text-neutral-500"
        onClick={[Function]}
        type="button"
      >
        ...see more
      </button>
    </div>
  </div>
</div>
`;
